--- a/Assignment-4/code/src/Postview.css
+++ b/Assignment-4/code/src/Postview.css
@@ -1,11 +1,74 @@
-.site-container{
+*{
+  margin: none;
+  padding: none;
+
+
+}
+.header{
+  background-color: cornflowerblue;
+  height: 60px;
+  padding-top: 3px;
+  padding-left: 50px;
+
+}
+.logo{
+  height: 25px;
+  width: 25px;
+  float: left;
+  margin-top: 25px;
+}
+.header span img{
+  background-color: cornflowerblue;
+  height: 21px;
+  width: 21px;
+}
+.header span{
+  margin-left: 750px;
+}
+.card{
+  border: 1px solid black;
+  margin: 10px 0px ;
+  margin-left: 250px;
   text-align: center;
+  width: 50%;
+  background-color: cyan;
 }
-html {
-  font-size: 14px;
+.card img{
+  width: 100%;
+  height: 250px;
 }
-body {
-  line-height: 1.5;
-  color: black;
-  margin:0;
-} 
+
+.card label{
+
+  display: block;
+  float: left;
+}
+.btnMore{
+  float: right;
+  text-shadow: 10px;
+  padding-bottom: 20px;
+  border: none;
+  background-color: cyan;
+}
+.btnMore:hover{
+  cursor: pointer;
+}
+.post-footer{
+  height: 65px;
+}
+.post-footer img{
+  height: 21px;
+  width: 21px;
+  padding-left: 12px;
+  float: left;
+}
+.post-footer .likes{
+  height: 2px;
+  color: gray;
+}
+.post-date{
+  margin-left: 275px;
+}
+.post-footer p{
+  float: left;
+}
